--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "5.3.0"
+    "version": "5.4.0"
   },
   "scripts": {
     "build": "hexo g",
@@ -19,6 +19,7 @@
     "@njzjz/hexo-sitemap": "0.0.2",
     "@waline/hexo-next": "1.0.5",
     "hexo": "5.4.0",
+    "hexo-extract-inline-scripts": "^0.0.1",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-basic-set": "0.1.1",
     "hexo-generator-category": "1.0.0",
