--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@njzjz/hexo-sitemap": "0.0.2",
     "@waline/hexo-next": "1.0.5",
     "hexo": "5.4.0",
-    "hexo-extract-inline-scripts": "^0.0.1",
+    "hexo-extract-inline-scripts": "0.0.2",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-basic-set": "0.1.1",
     "hexo-generator-category": "1.0.0",
