--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hexo-tag-bilitube": "0.1.10",
     "hexo-tag-publications": "0.1.3",
     "hexo-theme-next": "8.2.2",
+    "jsdelivr_url": "^0.0.1",
     "micromatch": "4.0.2"
   },
   "devDependencies": {
