--- a/package.json
+++ b/package.json
@@ -42,15 +42,13 @@
     "hexo-tag-bilitube": "0.1.10",
     "hexo-tag-publications": "0.1.3",
     "hexo-theme-next": "8.2.2",
+    "jsdelivr_url": "^0.0.1",
     "micromatch": "4.0.2"
   },
   "devDependencies": {
     "bundlesize": "0.18.1",
     "hexo-all-minifier": "0.5.5",
     "minify-xml": "2.5.0"
-  },
-  "engines": {
-    "node": ">=10.x"
   },
   "resolutions": {
     "gifsicle": "4.0.1"
