--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@jiangtj/hexo-next-pwa": "2.0.1",
     "@njzjz/hexo-sitemap": "0.0.2",
+    "@njzjz/icons": "0.0.1",
     "@waline/hexo-next": "1.0.8",
     "hexo": "5.4.0",
     "hexo-extract-inline-scripts": "0.0.2",
