--- a/_config.yml
+++ b/_config.yml
@@ -98,19 +98,13 @@ minify:
 
 sitemap:
   path: sitemap.xml
-
-index2_generator:
-  - layout: "archive"
-    path: "archives"
-    exclude:
-      - category ECNUChemistry
-      - category Internship
-  - layout: "index"
-    path: ""
-    index: true
-    exclude:
-      - category ECNUChemistry
-      - category Internship
+hide_posts:
+  public_generators:
+    - tag
+    - category
+    - sitemap
+    - feed
+  noindex: false
 
 symbols_count_time:
   symbols: true
