--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "hexo-generator-category": "1.0.0",
     "hexo-generator-feed": "3.0.0",
     "hexo-generator-index": "2.0.0",
-    "hexo-generator-index2": "0.2.0",
     "hexo-generator-searchdb": "1.3.3",
     "hexo-generator-sitemap": "2.1.0",
     "hexo-generator-tag": "1.0.0",
+    "hexo-hide-posts": "^0.1.1",
     "hexo-image-cloudflare": "0.2.4",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
