--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,13 @@ index_generator:
   path: ""
   per_page: 10
   order_by: -date
+archive_generator:
+  enabled: true
+  per_page: 10
+  yearly: true
+  monthly: true
+  daily: false
+  order_by: -date
 
 # Category & Tag
 default_category: uncategorized
