--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,13 @@ minify:
 
 sitemap:
   path: sitemap.xml
-
+index2_include_index: false
 index2_generator:
   - layout: "archive"
     path: "archives"
+    exclude:
+      - category ECNUChemistry
+      - category Internship
 hide_posts:
   public_generators:
     - tag
