--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "build": "hexo g",
+    "clean": "hexo clean",
     "bundlesize": "bundlesize"
   },
   "bundlesize": [
@@ -31,6 +32,7 @@
     "hexo-generator-searchdb": "1.3.3",
     "hexo-generator-sitemap": "2.1.0",
     "hexo-generator-tag": "1.0.0",
+    "hexo-hide-posts": "^0.1.1",
     "hexo-image-cloudflare": "0.2.4",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
