--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "hexo g",
     "clean": "hexo clean",
+    "serve": "hexo serve",
     "bundlesize": "bundlesize"
   },
   "bundlesize": [
@@ -36,7 +37,6 @@
     "hexo-image-cloudflare": "0.2.4",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
-    "hexo-related-popular-posts": "5.0.1",
     "hexo-renderer-ejs": "1.0.0",
     "hexo-renderer-marked": "4.0.0",
     "hexo-renderer-stylus": "2.0.1",
