--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "hexo-renderer-stylus": "2.0.1",
     "hexo-server": "2.0.0",
     "hexo-source-tag": "0.0.13",
-    "hexo-symbols-count-time": "0.7.1",
     "hexo-tag-bilitube": "0.1.10",
     "hexo-tag-publications": "0.1.14",
     "hexo-theme-next": "8.3.0",
+    "hexo-word-counter": "0.0.3",
     "jsdelivr_url": "0.0.1",
     "sticker-heo": "0.6.0"
   },
