chore: now I'm a candidate

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Jinzhe Zeng's Blog
 subtitle: 苟利国家生死以，岂因祸福避趋之
-description: PhD student at Rutgers University
+description: PhD candidate at Rutgers University
 keywords: Jinzhe Zeng Blog
 author: Jinzhe Zeng
 language:
