--- a/_config.next.yml
+++ b/_config.next.yml
@@ -88,6 +88,7 @@ links_settings:
 links:
   "Darrin York Group": http://theory.rutgers.edu/profile.php?people_id=230
   "Tong Zhu Group": https://computchem.cn/people
+  "DeepModeling": https://deepmodeling.org
   "hexi blog": https://hexi519.github.io
 vendors:
   internal: jsdelivr
