chore: use native image resizing

--- a/_config.yml
+++ b/_config.yml
@@ -122,6 +122,7 @@ search:
 
 cdn: 
   use_webp: true
+  native: true
   exclude_domains:
     - https://images.weserv.nl/
     - https://img.njzjz.win/
