chore: upgrade to yarn 2

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ node_modules/
 public/
 .deploy*/
 themes/next/
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
