--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ public/
 .deploy*/
 themes/next/
 .yarn/*
-!.yarn/cache
 !.yarn/patches
-!.yarn/plugins
 !.yarn/releases
+!.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
+.pnp.*
