--- a/_config.next.yml
+++ b/_config.next.yml
@@ -96,5 +96,5 @@ vendors:
 nprogress:
   enable: true
 preconnect: true
-google_analytics:
-  tracking_id: G-E1TJFFMGRY
+#google_analytics:
+#  tracking_id: G-E1TJFFMGRY
