--- a/_config.next.yml
+++ b/_config.next.yml
@@ -28,6 +28,7 @@ social:
   Twitter: https://twitter.com/njzjz || fab fa-twitter
   Zhihu: https://www.zhihu.com/people/zeng-jin-zhe || fab fa-zhihu
   Weibo: https://weibo.com/njzjz || fab fa-weibo
+  Bilibili: https://space.bilibili.com/421240980/ || fa-brands fa-bilibili
 social_icons:
   icons_only: true
   transition: true
@@ -88,7 +89,7 @@ links_settings:
 links:
   "Darrin York Group": http://theory.rutgers.edu/profile.php?people_id=230
   "Tong Zhu Group": https://computchem.cn/people
-  "DeepModeling": https://deepmodeling.org
+  "DeepModeling": https://deepmodeling.com
   "hexi blog": https://hexi519.github.io
 vendors:
   internal: jsdelivr
