--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "hexo-tag-publications": "0.2.6",
     "hexo-theme-next": "8.11.1",
     "hexo-word-counter": "0.0.3",
-    "jsdelivr_url": "0.0.1",
-    "sticker-heo": "0.17.2"
+    "sticker-heo": "0.17.2",
+    "unpkg_url": "^0.0.1"
   },
   "devDependencies": {
     "@njzjz/preview-cfpages": "0.0.6",
