Revert "fix(deps): pin dependency unpkg_url to 0.0.1 (#1087)"
This reverts commit 992d500ab711e2bb8fdacf4ef5d20edf86ee31ec.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "hexo-theme-next": "8.11.1",
     "hexo-word-counter": "0.0.3",
     "sticker-heo": "0.17.2",
-    "unpkg_url": "0.0.1"
+    "unpkg_url": "^0.0.1"
   },
   "devDependencies": {
     "@njzjz/preview-cfpages": "0.0.6",
