--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,14 +31,13 @@ jobs:
     - run: yarn build
       if: github.ref == 'refs/heads/hexo'
       env:
-        CSS_COMMIT: master
         BUNDLESIZE_GITHUB_TOKEN: ${{ secrets.BUNDLESIZE_GITHUB_TOKEN }}
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v4
-      if: github.ref == 'refs/heads/hexo'
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: master
-        FOLDER: public
-        BASE_BRANCH: hexo
-        CLEAN: true
+    #- name: Deploy to GitHub Pages
+    #  uses: JamesIves/github-pages-deploy-action@releases/v4
+    #  if: github.ref == 'refs/heads/hexo'
+    #  with:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #    BRANCH: master
+    #    FOLDER: public
+    #    BASE_BRANCH: hexo
+    #    CLEAN: true
