--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "hexo-generator-tag": "1.0.0",
     "hexo-hide-posts": "0.2.0",
     "hexo-image-cloudflare": "0.3.2",
-    "hexo-reference": "1.0.4",
+    "hexo-reference": "github:kchen0x/hexo-reference",
     "hexo-renderer-ejs": "2.0.0",
     "hexo-renderer-marked": "6.0.0",
     "hexo-renderer-stylus": "2.1.0",
