--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ search:
 
 cdn:
   use_webp: true
-  native: true
+  native: false
   exclude_domains:
     - https://images.weserv.nl/
     - https://img.njzjz.win/
