add qiuwen to friend link

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -90,6 +90,7 @@ links:
   "Tong Zhu Group": https://computchem.cn/people
   "DeepModeling": https://deepmodeling.com
   "hexi blog": https://hexi519.github.io
+  "求闻百科": https://www.qiuwenbaike.cn
 vendors:
   internal: cdnjs
   plugins: cdnjs
