--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,29 +15,8 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 20
+        cache: yarn
     - run: npm install -g yarn
-    - name: Get yarn cache
-      id: yarn-cache
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - uses: actions/cache@v4
-      with:
-        path: ${{ steps.yarn-cache.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
     - run: yarn install
     - run: yarn build
       if: github.ref != 'refs/heads/hexo'
-    - run: yarn build
-      if: github.ref == 'refs/heads/hexo'
-      env:
-        BUNDLESIZE_GITHUB_TOKEN: ${{ secrets.BUNDLESIZE_GITHUB_TOKEN }}
-    #- name: Deploy to GitHub Pages
-    #  uses: JamesIves/github-pages-deploy-action@releases/v4
-    #  if: github.ref == 'refs/heads/hexo'
-    #  with:
-    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #    BRANCH: master
-    #    FOLDER: public
-    #    BASE_BRANCH: hexo
-    #    CLEAN: true
