change google scholar icon to `fa-google-scholar`

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -23,7 +23,7 @@ social:
   GitHub: https://github.com/njzjz || fab fa-github
   E-Mail: mailto:jinzhe.zeng@rutgers.edu || fa fa-envelope
   ORCID: https://orcid.org/0000-0002-1515-8172 || fab fa-orcid
-  Scholar: https://scholar.google.com/citations?user=P7gRtg4AAAAJ || fab fa-google
+  Scholar: https://scholar.google.com/citations?user=P7gRtg4AAAAJ || fab fa-google-scholar
   ResearchGate: https://www.researchgate.net/profile/Jinzhe_Zeng || fab fa-researchgate
   Zhihu: https://www.zhihu.com/people/zeng-jin-zhe || fab fa-zhihu
   Weibo: https://weibo.com/njzjz || fab fa-weibo
